# oh-my-codex

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_BODY.md  package-lock.json  package.json
.codex/agents/: explore.toml  researcher.toml  vision.toml  writer.toml
.codex/skills/team/: SKILL.md
crates/omx-mux/src/: lib.rs  (+1 more)
crates/omx-sparkshell/: Cargo.toml
docs/: codex-native-hooks.md  openclaw-integration.md  release-notes-0.11.10.md  release-notes-0.12.1.md  skills.html
docs/issues/: team-ralph-followup-team.md
docs/prs/: dev-team-ralph-workflow-positioning.md
docs/qa/: release-readiness-0.12.1.md
scripts/notify-hook/: auto-nudge.js
skills/configure-notifications/: SKILL.md
src/catalog/: manifest.json
src/cli/: doctor.ts  index.ts  ralph.ts  setup.ts  sparkshell.ts  team.ts
src/hooks/: agents-overlay.ts  session.ts
src/hud/: state.ts
src/mcp/: bootstrap.ts  code-intel-server.ts  memory-server.ts  state-paths.ts  state-server.ts  team-server.ts  trace-server.ts
src/modes/: base.ts
src/notifications/: config.ts  formatter.ts  tmux-detector.ts  tmux.ts  types.ts
src/openclaw/: config.ts
src/planning/: artifacts.ts
src/scripts/: codex-native-hook.ts  codex-native-pre-post.ts  notify-fallback-watcher.ts  notify-hook.ts  smoke-packed-install.ts  test-sparkshell.ts  tmux-hook-engine.ts
src/state/: operations.ts  skill-active.ts
src/team/: leader-activity.ts  runtime.ts  scaling.ts  state.ts  tmux-session.ts  worktree.ts
src/types/: tmux-hook-engine.d.ts
src/utils/: paths.ts
templates/: catalog-manifest.json
(+44 files in other folders)
