[workspace]
members = [
  "crates/omx-explore",
  "crates/omx-mux",
  "crates/omx-runtime-core",
  "crates/omx-runtime",
  "crates/omx-sparkshell",
]
resolver = "2"

[workspace.package]

version = "0.12.1"

edition = "2021"
license = "MIT"
repository = "https://github.com/Yeachan-Heo/oh-my-codex"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
